Implement complete decentralized content moderation system
- Add 5 core smart contracts: governance token, content registry, flagging system, moderation DAO, and appeals
- Implement token-weighted voting with quorum requirements
- Add comprehensive test suite with 45 passing tests
- Enable end-to-end workflow: content registration → flagging → DAO voting → appeals
- Include cross-contract authorization and event emission

--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -5,9 +5,25 @@ authors = []
 telemetry = false
 cache_dir = "./.cache"
 
-# [contracts.counter]
-# path = "contracts/counter.clar"
-# epoch = "latest"
+[contracts.governance-token]
+path = "contracts/governance-token.clar"
+epoch = "latest"
+
+[contracts.content-registry]
+path = "contracts/content-registry.clar"
+epoch = "latest"
+
+[contracts.flagging-system]
+path = "contracts/flagging-system.clar"
+epoch = "latest"
+
+[contracts.moderation-dao]
+path = "contracts/moderation-dao.clar"
+epoch = "latest"
+
+[contracts.appeals]
+path = "contracts/appeals.clar"
+epoch = "latest"
 
 [repl.analysis]
 passes = ["check_checker"]
